--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,18 @@ arrayFunctions.pdf
 student_exercises/corrections/basics/affichageNombres/
 student_exercises/corrections/*.js
 student_exercises/corrections/advanced/
-student_exercises/corrections/DOM/
 
-student_exercises/implementations/DOM/calculatrice/
+student_exercises/corrections/DOM/calculatrice/
+student_exercises/corrections/DOM/carousel/
+student_exercises/corrections/DOM/chrono/
+student_exercises/corrections/DOM/click_count/
+student_exercises/corrections/DOM/snake/
+student_exercises/corrections/DOM/toDo_list/
+student_exercises/corrections/DOM/usersList/
+student_exercises/corrections/DOM/*.zip
+
 student_exercises/implementations/DOM/carousel/
 student_exercises/implementations/DOM/chrono/
-student_exercises/implementations/DOM/click_count/
 student_exercises/implementations/DOM/snake/
 student_exercises/implementations/DOM/toDo_list/
 student_exercises/implementations/DOM/usersList/
